# Face-Clipper

./: README.md
2_CaptureFaces/: CMakeLists.txt  CaptureFaces.cpp
